# residual

./: LICENSE  README.md  pyproject.toml
data/tests/: adh.fasta
residual/: __init__.py  __main__.py  protein_sequence.py  surveyor.py  utils.py  watchtower.py
residual/protein_sequence/: __init__.py  descriptors.py  feature.py  protein_sequence.py  sequence_display.py
residual/services/: __init__.py  base_class.py  interpro_scan.py  loader.py
residual/surveyor/: __init__.py  surveyor.py
tests/: test_loading.py  test_record.py  test_sequence.py  test_services.py  test_surveyor.py
tests/core_tests/: test_sequence.py  test_services.py  test_surveyor.py
tests/service_tests/: test_interpro_scan.py
watchtower/: __main__.py  protein_sequence.py  sequence_record.py  utils.py  watchtower.py
watchtower/services/: base_class.py  interpro_scan.py
