[tool.poetry]
name = "watchtower"
version = "0.1.0"
description = "A package for gathering and collating analysis results for protein sequences."
authors = ["bjtha <142571425+bjtha@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"

[tool.poetry.scripts]
main = "watchtower.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
