[tool.poetry]
name = "residual"
version = "0.1.0"
description = "A package for gathering and collating analysis results for protein sequences."
authors = ["bjtha <142571425+bjtha@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
requests = "^2.32.3"
poetry = "^2.0.0"
loguru = "^0.7.3"
numpy = "^2.2.2"

[tool.poetry.scripts]
main = "residual.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
